[gd_scene load_steps=54 format=3 uid="uid://djrahedsf5gjh"]

[ext_resource type="Theme" uid="uid://bpx5awpyhikey" path="res://resources/theme_ui.tres" id="1_7fiqs"]
[ext_resource type="Texture2D" uid="uid://d2dvf1pua2v0i" path="res://assets/sprites/ui/brand_new_main_bg.png" id="1_gfuek"]
[ext_resource type="Script" path="res://scripts/asteroid_manager.gd" id="3_usteg"]
[ext_resource type="Texture2D" uid="uid://dbopkhuvs7gww" path="res://assets/sprites/ui/game_border_new.png" id="4_ejo0o"]
[ext_resource type="Script" path="res://scripts/midi_control.gd" id="5_bsmkh"]
[ext_resource type="Script" path="res://scripts/midi_key.gd" id="6_h1jov"]
[ext_resource type="Texture2D" uid="uid://dba4iwtcjh5q" path="res://assets/sprites/ui/key_sheet.png" id="7_fotnd"]
[ext_resource type="Script" path="res://scripts/score_manager.gd" id="8_fj4el"]
[ext_resource type="PackedScene" uid="uid://b0tmi7li5psis" path="res://scenes/score_popup.tscn" id="9_3vkqq"]
[ext_resource type="FontFile" uid="uid://dkfllk3hbjb5q" path="res://assets/fonts/m6x11.ttf" id="10_jrjda"]
[ext_resource type="Script" path="res://scripts/countdown.gd" id="11_10lgx"]
[ext_resource type="Texture2D" uid="uid://c8ivb2eysk1ci" path="res://assets/sprites/ui/menu_button.png" id="12_m655e"]
[ext_resource type="Texture2D" uid="uid://bh6ril34awasd" path="res://assets/sprites/ui/menu_panel.png" id="13_hy6gj"]
[ext_resource type="Texture2D" uid="uid://dddwg3f4e0w84" path="res://assets/sprites/ui/panel_border.png" id="14_sv65g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_23i1g"]
atlas = ExtResource("7_fotnd")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_65dq8"]
atlas = ExtResource("7_fotnd")
region = Rect2(64, 0, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_dt0n1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_23i1g")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_65dq8")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_yixws"]
atlas = ExtResource("7_fotnd")
region = Rect2(0, 320, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_buj3a"]
atlas = ExtResource("7_fotnd")
region = Rect2(32, 320, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2eofh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yixws")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_buj3a")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ehuqw"]
atlas = ExtResource("7_fotnd")
region = Rect2(128, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lt7t"]
atlas = ExtResource("7_fotnd")
region = Rect2(192, 0, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_c7vt4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehuqw")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lt7t")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_mjfpl"]
atlas = ExtResource("7_fotnd")
region = Rect2(64, 320, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2t8n"]
atlas = ExtResource("7_fotnd")
region = Rect2(96, 320, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_aridw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjfpl")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2t8n")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6en1o"]
atlas = ExtResource("7_fotnd")
region = Rect2(256, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwrls"]
atlas = ExtResource("7_fotnd")
region = Rect2(320, 0, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_0ypmk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6en1o")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwrls")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_73iiu"]
atlas = ExtResource("7_fotnd")
region = Rect2(384, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoqdl"]
atlas = ExtResource("7_fotnd")
region = Rect2(448, 0, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_dmamq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_73iiu")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoqdl")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ydc4f"]
atlas = ExtResource("7_fotnd")
region = Rect2(128, 320, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqikj"]
atlas = ExtResource("7_fotnd")
region = Rect2(160, 320, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_d5bae"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydc4f")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqikj")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_vykgj"]
atlas = ExtResource("7_fotnd")
region = Rect2(64, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhm2j"]
atlas = ExtResource("7_fotnd")
region = Rect2(128, 128, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ob2nf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vykgj")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhm2j")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3ross"]
atlas = ExtResource("7_fotnd")
region = Rect2(192, 320, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywdrl"]
atlas = ExtResource("7_fotnd")
region = Rect2(224, 320, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6p0kb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ross")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywdrl")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_gwokt"]
atlas = ExtResource("7_fotnd")
region = Rect2(192, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3grf"]
atlas = ExtResource("7_fotnd")
region = Rect2(256, 128, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_slbis"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwokt")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3grf")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_080gj"]
atlas = ExtResource("7_fotnd")
region = Rect2(256, 320, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrean"]
atlas = ExtResource("7_fotnd")
region = Rect2(288, 320, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_4nyf2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_080gj")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrean")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_eqxue"]
atlas = ExtResource("7_fotnd")
region = Rect2(320, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7ewo"]
atlas = ExtResource("7_fotnd")
region = Rect2(384, 128, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_7a3o2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqxue")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7ewo")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_o7t8y"]
font = ExtResource("10_jrjda")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_rjm8h"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_n6koc"]
font = ExtResource("10_jrjda")
font_size = 32

[node name="Main" type="Node2D"]

[node name="MainBG" type="Sprite2D" parent="."]
position = Vector2(480, 270)
texture = ExtResource("1_gfuek")

[node name="GamePanel" type="NinePatchRect" parent="."]
offset_left = 32.0
offset_top = 62.0
offset_right = 448.0
offset_bottom = 478.0
texture = ExtResource("14_sv65g")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="GameViewportContainer" type="SubViewportContainer" parent="GamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 7.0
offset_right = -7.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="GameViewport" type="SubViewport" parent="GamePanel/GameViewportContainer"]
handle_input_locally = false
snap_2d_transforms_to_pixel = true
size = Vector2i(402, 402)
render_target_update_mode = 4

[node name="AsteroidManager" type="Control" parent="GamePanel/GameViewportContainer/GameViewport"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_usteg")
metadata/_edit_use_anchors_ = true

[node name="AsteroidSpawnTimer" type="Timer" parent="GamePanel/GameViewportContainer/GameViewport/AsteroidManager"]
wait_time = 3.0
autostart = true

[node name="Border" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(480, 270)
texture = ExtResource("4_ejo0o")

[node name="Particles" type="Node2D" parent="."]
position = Vector2(270, 270)

[node name="UI" type="CanvasLayer" parent="."]

[node name="MIDIControlPanel" type="NinePatchRect" parent="UI"]
offset_left = 512.0
offset_top = 302.0
offset_right = 928.0
offset_bottom = 478.0
theme = ExtResource("1_7fiqs")
texture = ExtResource("14_sv65g")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Control" type="Control" parent="UI/MIDIControlPanel"]
clip_contents = true
layout_mode = 1
anchor_left = 0.017
anchor_top = 0.038
anchor_right = 0.983
anchor_bottom = 0.962
offset_left = -0.0720005
offset_top = 0.00799942
offset_right = 0.071991
offset_bottom = -0.00801086
grow_horizontal = 2
grow_vertical = 2

[node name="MIDI Control" type="Control" parent="UI/MIDIControlPanel/Control" node_paths=PackedStringArray("midi_keys")]
unique_name_in_owner = true
layout_mode = 1
anchor_left = -0.00952742
anchor_top = 0.047103
anchor_right = -0.00952742
anchor_bottom = 1.0471
offset_left = 10.83
offset_top = 10.6447
offset_right = 10.83
offset_bottom = -141.799
script = ExtResource("5_bsmkh")
midi_keys = [NodePath("C Key"), NodePath("CD Key"), NodePath("D Key"), NodePath("DE Key"), NodePath("E Key"), NodePath("F Key"), NodePath("FG Key"), NodePath("G Key"), NodePath("GA Key"), NodePath("A Key"), NodePath("AB Key"), NodePath("B Key")]
metadata/_edit_use_anchors_ = true

[node name="C Key" type="Node2D" parent="UI/MIDIControlPanel/Control/MIDI Control"]
position = Vector2(26, 66)
script = ExtResource("6_h1jov")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI/MIDIControlPanel/Control/MIDI Control/C Key"]
sprite_frames = SubResource("SpriteFrames_dt0n1")
animation = &"off"
autoplay = "off"

[node name="CD Key" type="Node2D" parent="UI/MIDIControlPanel/Control/MIDI Control"]
position = Vector2(49, 26)
script = ExtResource("6_h1jov")
pitch_type = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI/MIDIControlPanel/Control/MIDI Control/CD Key"]
sprite_frames = SubResource("SpriteFrames_2eofh")
animation = &"off"
autoplay = "off"

[node name="D Key" type="Node2D" parent="UI/MIDIControlPanel/Control/MIDI Control"]
position = Vector2(82, 66)
script = ExtResource("6_h1jov")
pitch_type = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI/MIDIControlPanel/Control/MIDI Control/D Key"]
sprite_frames = SubResource("SpriteFrames_c7vt4")
animation = &"off"
autoplay = "off"

[node name="DE Key" type="Node2D" parent="UI/MIDIControlPanel/Control/MIDI Control"]
position = Vector2(115, 32)
script = ExtResource("6_h1jov")
pitch_type = 3

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI/MIDIControlPanel/Control/MIDI Control/DE Key"]
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_aridw")
animation = &"off"
autoplay = "off"

[node name="E Key" type="Node2D" parent="UI/MIDIControlPanel/Control/MIDI Control"]
position = Vector2(138, 66)
script = ExtResource("6_h1jov")
pitch_type = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI/MIDIControlPanel/Control/MIDI Control/E Key"]
sprite_frames = SubResource("SpriteFrames_0ypmk")
animation = &"off"
autoplay = "off"

[node name="F Key" type="Node2D" parent="UI/MIDIControlPanel/Control/MIDI Control"]
position = Vector2(194, 66)
script = ExtResource("6_h1jov")
pitch_type = 5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI/MIDIControlPanel/Control/MIDI Control/F Key"]
sprite_frames = SubResource("SpriteFrames_dmamq")
animation = &"off"
autoplay = "off"

[node name="FG Key" type="Node2D" parent="UI/MIDIControlPanel/Control/MIDI Control"]
position = Vector2(215, 32)
script = ExtResource("6_h1jov")
pitch_type = 6

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI/MIDIControlPanel/Control/MIDI Control/FG Key"]
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_d5bae")
animation = &"off"
autoplay = "off"

[node name="G Key" type="Node2D" parent="UI/MIDIControlPanel/Control/MIDI Control"]
position = Vector2(250, 66)
script = ExtResource("6_h1jov")
pitch_type = 7

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI/MIDIControlPanel/Control/MIDI Control/G Key"]
sprite_frames = SubResource("SpriteFrames_ob2nf")
animation = &"off"
autoplay = "off"

[node name="GA Key" type="Node2D" parent="UI/MIDIControlPanel/Control/MIDI Control"]
position = Vector2(278, 32)
script = ExtResource("6_h1jov")
pitch_type = 8

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI/MIDIControlPanel/Control/MIDI Control/GA Key"]
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_6p0kb")
animation = &"off"
autoplay = "off"

[node name="A Key" type="Node2D" parent="UI/MIDIControlPanel/Control/MIDI Control"]
position = Vector2(306, 66)
script = ExtResource("6_h1jov")
pitch_type = 9

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI/MIDIControlPanel/Control/MIDI Control/A Key"]
sprite_frames = SubResource("SpriteFrames_slbis")
animation = &"off"
autoplay = "off"

[node name="AB Key" type="Node2D" parent="UI/MIDIControlPanel/Control/MIDI Control"]
position = Vector2(341, 32)
script = ExtResource("6_h1jov")
pitch_type = 10

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI/MIDIControlPanel/Control/MIDI Control/AB Key"]
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_4nyf2")
animation = &"off"
autoplay = "off"

[node name="B Key" type="Node2D" parent="UI/MIDIControlPanel/Control/MIDI Control"]
position = Vector2(362, 66)
script = ExtResource("6_h1jov")
pitch_type = 11

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI/MIDIControlPanel/Control/MIDI Control/B Key"]
sprite_frames = SubResource("SpriteFrames_7a3o2")
animation = &"off"
autoplay = "off"

[node name="Score Manager" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 885.0
offset_top = 23.0
offset_right = 925.0
offset_bottom = 63.0
script = ExtResource("8_fj4el")
score_popup = ExtResource("9_3vkqq")
metadata/_edit_use_anchors_ = true

[node name="ScoreLabel" type="Label" parent="UI/Score Manager"]
visible = false
layout_mode = 0
offset_right = 123.0
offset_bottom = 33.0
text = "0"
label_settings = SubResource("LabelSettings_o7t8y")
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="ScoreText" type="Label" parent="UI/Score Manager"]
layout_mode = 0
offset_left = -127.0
offset_top = -1.0
offset_right = -4.0
offset_bottom = 32.0
text = "SCORE:"
label_settings = SubResource("LabelSettings_o7t8y")
horizontal_alignment = 2
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="MainMenu" type="VBoxContainer" parent="UI"]
visible = false
offset_left = 170.0
offset_top = 251.0
offset_right = 370.0
offset_bottom = 451.0

[node name="StartButtonTexture" type="NinePatchRect" parent="UI/MainMenu"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("12_m655e")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="StartButton" type="Button" parent="UI/MainMenu/StartButtonTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_jrjda")
theme_override_font_sizes/font_size = 32
shortcut_feedback = false
text = "START GAME"
flat = true

[node name="OptionsButtonTexture" type="NinePatchRect" parent="UI/MainMenu"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("12_m655e")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="OptionsButton" type="Button" parent="UI/MainMenu/OptionsButtonTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_jrjda")
theme_override_font_sizes/font_size = 32
disabled = true
text = "OPTIONS
"
flat = true

[node name="QuitButtonTexture" type="NinePatchRect" parent="UI/MainMenu"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("12_m655e")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="QuitButton" type="Button" parent="UI/MainMenu/QuitButtonTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_jrjda")
theme_override_font_sizes/font_size = 32
text = "QUIT
"
flat = true

[node name="PauseMenu" type="NinePatchRect" parent="UI"]
visible = false
offset_left = 143.0
offset_top = 142.0
offset_right = 163.0
offset_bottom = 404.0
texture = ExtResource("13_hy6gj")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="Label" type="Label" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 24.0
offset_bottom = 52.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("10_jrjda")
theme_override_font_sizes/font_size = 32
text = "PAUSED"
label_settings = SubResource("LabelSettings_rjm8h")
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 1

[node name="Countdown" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchor_left = 0.158279
anchor_top = 1.8
anchor_right = 0.158279
anchor_bottom = 1.8
offset_left = 426.052
offset_top = -872.0
offset_right = 466.052
offset_bottom = -832.0
script = ExtResource("11_10lgx")
start_time = 180
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="UI/Countdown"]
autostart = true

[node name="CountdownLabel" type="Label" parent="UI/Countdown"]
layout_mode = 0
offset_right = 102.0
offset_bottom = 28.0
text = "test"
label_settings = SubResource("LabelSettings_n6koc")
metadata/_edit_use_anchors_ = true

[node name="CountdownPanel" type="NinePatchRect" parent="UI"]
offset_left = 512.0
offset_top = 62.0
offset_right = 592.0
offset_bottom = 113.0
theme = ExtResource("1_7fiqs")
texture = ExtResource("14_sv65g")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Timer" type="Timer" parent="UI/CountdownPanel"]
autostart = true

[node name="Control" type="Control" parent="UI/CountdownPanel"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 7.0
offset_right = -7.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2

[node name="CountdownLabel" type="Label" parent="UI/CountdownPanel/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.103448
anchor_right = 1.0
anchor_bottom = 1.10345
grow_horizontal = 2
grow_vertical = 2
text = "0:00"
label_settings = SubResource("LabelSettings_n6koc")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 2
metadata/_edit_use_anchors_ = true

[node name="ScorePanel" type="NinePatchRect" parent="UI"]
offset_left = 728.0
offset_top = 62.0
offset_right = 928.0
offset_bottom = 113.0
theme = ExtResource("1_7fiqs")
texture = ExtResource("14_sv65g")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Control" type="Control" parent="UI/ScorePanel"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 7.0
offset_right = -7.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2

[node name="CountdownLabel" type="Label" parent="UI/ScorePanel/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00250191
anchor_right = 1.0
anchor_bottom = 0.999998
offset_left = 8.46535
offset_top = 4.0
offset_right = -5.0
offset_bottom = 4.00007
grow_horizontal = 2
grow_vertical = 2
text = "SCORE: 0000000"
label_settings = SubResource("LabelSettings_n6koc")
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 1
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="UI/Countdown/Timer" to="UI/Countdown" method="_on_timer_timeout"]
[connection signal="timeout" from="UI/CountdownPanel/Timer" to="UI/Countdown" method="_on_timer_timeout"]
